tests/compiletests/ui/lang/core/mem/size_of_val_unsized.stderr
error: unsupported unsized `[struct () {  }]` constant
   |
   = note: used by unnamed global (%68)
   = note: used by unnamed global (%69)
note: used from within `size_of_val_unsized::main`
  --> <$DIR/size_of_val_unsized.rs>:5:12
   |
LL |       *out = core::mem::size_of_val(
   |  ____________^
LL | |         const {
LL | |             struct S<T: ?Sized>(T);
LL | |             &S([]) as &S<[()]>
LL | |         },
LL | |     );
   | |_____^
note: called by `main`
  --> <$DIR/size_of_val_unsized.rs>:4:8
   |
LL | pub fn main(out: &mut usize) {
   |        ^^^^

error: aborting due to 1 previous error

